--- a/src/_grid-classes.scss
+++ b/src/_grid-classes.scss
@@ -1,126 +1,63 @@
-$slugs: 'm', 'p', 't', 'd', 'r';
-
-@mixin grid-visibility-in($slug) {
-  .hide-in-#{$slug} {
-    display: none;
-  }
-
-  .show-in-#{$slug} {
-    display: block;
-  }
-}
-
-@mixin grid-visibility-at($slug) {
-  .show-at-#{$slug} {
-    display: block;
-  }
-
-  .hide-at-#{$slug} {
-    display: none;
-  }
-}
-
-@mixin grid-classes($slug) {
-  @for $i from 1 through 12 {
-    .l-#{$slug}#{$i} {
-      @include span($a: $i, $set-float: false);
-    }
-
-    .l-#{$slug}#{$i}-pul {
-      @include pull($a: $i, $set-pos: false);
-    }
-
-    .l-#{$slug}#{$i}-pus {
-      @include push($a: $i, $set-pos: false);
-    }
-
-    .l-#{$slug}#{$i}-pre {
-      @include prefix($i);
-    }
-
-    .l-#{$slug}#{$i}-suf {
-      @include suffix($i);
-    }
-  }
-}
-
-%grid-column {
+%grid-column-floater {
   float: left;
 }
 
-%grid-ordered {
+%grid-column-overrided {
   position: relative;
 }
 
-@for $i from 1 through 12 {
-  @each $slug in $slugs {
-    .l-#{$slug}#{$i} {
-      @extend %grid-column;
-    }
-
-    .l-#{$slug}#{$i}-pul {
-      @extend %grid-ordered;
-    }
-
-    .l-#{$slug}#{$i}-pus {
-      @extend %grid-ordered;
-    }
+@if $grid-classes-generate {
+  .#{$grid-container-class} {
+    @include container;
   }
-}
 
-.container {
-  @include container(100%);
-}
+  .#{$grid-row-class} {
+    @extend %grid-clear-fix;
+  }
 
-.row {
-  @extend %grid-clear-fix;
-}
+  @each $point, $abbr in $grid-responsive-abbreviations {
+    @for $i from 1 through $grid-columns {
+      .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-class-suffix} {
+        @extend %grid-column-floater;
+      }
 
-.centered {
-  float: none;
-  
-  margin-right: auto;
-  margin-left: auto;
-}
+      @if $grid-generate-pushpull-classes {
+        .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-push-suffix}#{$grid-responsive-class-suffix} {
+          @extend %grid-column-overrided;
+        }
 
-@include grid-classes('m');
+        .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-pull-suffix}#{$grid-responsive-class-suffix} {
+          @extend %grid-column-overrided;
+        }
+      }
+    }
 
-@include in-mobile {
-  @include grid-visibility-in('m');
-}
+    @include at($point) {
+      @for $i from 1 through $grid-columns {
+        .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-class-suffix} {
+          @include span($i, $set-float: false);
+        }
 
-@include at-phablet {
-  @include grid-classes('p');
-  @include grid-visibility-at('p');
-}
+        @if $grid-generate-pushpull-classes {
+          .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-push-suffix}#{$grid-responsive-class-suffix} {
+            @include push($i, $set-pos: false);
+          }
 
-@include in-phablet {
-  @include grid-visibility-in('p');
-}
+          .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-pull-suffix}#{$grid-responsive-class-suffix} {
+            @include pull($i, $set-pos: false);
+          }
+        }
 
-@include at-tablet {
-  @include grid-classes('t');
-  @include grid-visibility-at('t');
-}
+        @if $grid-generate-presuf-classes {
+          .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-prefix-suffix}#{$grid-responsive-class-suffix} {
+            @include prefix($i);
+          }
 
-@include in-tablet {
-  @include grid-visibility-in('t');
-}
-
-@include at-desktop {
-  @include grid-classes('d');
-  @include grid-visibility-at('d');
-}
-
-@include in-desktop {
-  @include grid-visibility-in('d');
-}
-
-@include at-retina {
-  @include grid-classes('r');
-  @include grid-visibility-at('r');
-}
-
-@include in-retina {
-  @include grid-visibility-in('r');
+          .#{$grid-responsive-abbreviations-prefix}#{$abbr}#{$grid-responsive-abbreviations-suffix}#{$i}#{$grid-responsive-suffix-suffix}#{$grid-responsive-class-suffix} {
+            @include suffix($i);
+          }
+        }
+      }
+    };
+  }
 }
