--- a/Lattice.scss
+++ b/Lattice.scss
@@ -2,7 +2,7 @@ $grid-columns: 12 !default;
 $grid-container-defualt-width: 85% !default;
 
 $grid-responsive-breakpoints: (
-	xsmall: 0px,
+	xsmall: 0em,
 	small: 40em,
 	medium: 64em,
 	large: 90em,
